# Plaques2Gallery

./: .env.example  .gitignore  LICENSE  README.md  clean_museum_plaques_text.py  main_pipeline.ipynb  ocr_text_exctraction.py  pyproject.toml  requirements.txt  web_scrapping.py  web_search.py
notebooks/: main_pipeline.ipynb
plaques2gallery/: __init__.py  clean_museum_plaques_text.py  config.py  ocr_text_extraction.py  web_scraping.py  web_search.py
plaques2gallery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
